# ocr-pipeline

./: .env.example  .gitignore  README.md  pyproject.toml
deploy/: ocr-pipeline.service
src/ocr_pipeline/: __init__.py  __main__.py  config.py  hashing.py  logging_setup.py  mdfile.py  monitoring.py  pdfutil.py  queue.py  reconcile.py  service.py  watcher.py
src/ocr_pipeline/pipeline/: __init__.py  graph.py  nodes.py  openai_client.py  prompts.py
tests/: conftest.py  test_hashing.py  test_mdfile.py  test_openai_client.py  test_pdfutil.py  test_pipeline_smoke.py  test_prompts.py  test_queue.py  test_reconcile.py  test_watcher.py
